# BioBundle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
gui/build-translate-Desktop-Debug/: Makefile  moc_translate.cpp  translate  ui_translate.h
gui/translate/: main.cpp  translate.cpp  translate.h  translate.pro  translate.ui
manual/: isoformCleaner.tex  manual.tex  seqExtract.tex  stopCleaner.tex
src/: domain2topGo.py  gffSort.cpp  isoformCleaner.cpp  seqCheck.cpp  seqExtract.cpp  seqSetInfo.cpp  seqSetMod.cpp  stopCleaner.cpp
src/lib/other/: Feature.cpp  Feature.hpp  FeatureSet.cpp  FeatureSet.hpp
src/lib/seq/: Alphabets.cpp  Alphabets.hpp  Sequence.cpp  Sequence.hpp  SequenceSet.cpp  SequenceSet.hpp
src/lib/utility/: utility.cpp  utility.hpp
tests/integrationTests/: gffSort-Test.sh  isoformCleaner-Test.sh  seqExtract-Test.sh  seqSetInfo-Test.sh  seqSetMod-Test.sh  stopCleaner-Test.sh  test1.fa  unsorted.gff
tests/integrationTests/data/: cds.fa  cleanProt.fa  inputList.txt  isoformTest1.fa  isoformTest2.fa  isoformTest3.fa  isoformTest3.gff  keep.txt  modifyTest.fa  namesFile.txt  regExtract.fa  regExtract.sei  rename.fa  rename.txt  seqStatInfo.fa  stopEnding.fa  test.fa  test.sei  test2.fa  unsorted.gff
tests/integrationTests/results/: aa.fa  cds_new.fa  rename.fa  sorted.gff  stopEnding.fa  test2.fa
tests/unitTests/: CMakeLists.txt
tests/unitTests/seq/: Alphabet_Test.hpp  SequenceSet_Test.hpp  Sequence_Test.hpp  seq_tests.cpp
tests/unitTests/seq/data/: HBB.fa
tests/unitTests/utility/: utility_Test.hpp  utility_tests.cpp
tests/unitTests/utility/data/: IO_test.txt  IO_test.txt.bz2
